# HENets

./: CMakeLists.txt  conv2D.h  dense.cpp  dense.h  layer.cpp  layer.h  model.h  test1.cpp
